sorted out files--for some reason I was working in the assignment 4 index.html file...doh.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- jQuery MDN -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!-- My JavaScript -->
-    <script src="Assets/javascript/game.js"></script>
+    <script src="Assets/javascript/app.js"></script>
 
 </body>
 </html>
