updated JS and html.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     <div class="timer"></div>
     
     <div class="container">
-        <div class="quiz"></div>
+        <section class="quiz">
+            <label></label>
+        </section>
         <button class="submit">Finished!</button>
         <div class="results"></div>
     </div>
