--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- jQuery MDN -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!-- My JavaScript -->
-    <script src="../app_v2.js"></script>
+    <script src="Assets/javascript/app.js"></script>
 
 </body>
 </html>
