--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   
     </div>
 
-    <div id="result"></div>
+    <div id="results"></div>
               
     <!-- jQuery MDN -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
