updated css, html, and js. results still aren't working but they do show up on the page...

--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Harry Potter Trivia Game</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Boostrap Stylesheet -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <!-- My CSS stylesheet -->
+    <!-- My CSS -->
     <link rel="stylesheet" type="text/css" media="screen" href="Assets/css/style.css" />
     <!-- Google Font -->
+
 </head>
 <body>
     <div class="container">
@@ -17,15 +16,16 @@
     <header>
         <h1>Test your Harry Potter knowledge...</h1>
     </header>
-
-    <button id="start" class="btn btn-primary btn-lg">Start the Quiz</button>
+ 
+    <img src="Assets/images/HPclass_dk.jpg" alt="Hogwarts classroom scene from a Harry Potter movie">
+    <button id="start" class="button">Start the Quiz</button>
     <section id="timer"></section>
 
         <form id="form">
             
         </form>
     
-        <button id="submit" class="btn btn-primary btn-lg">Finished!</button>
+        <button id="submit" class="button">Finished!</button>
 
     <div id="results"></div>
     </div>         
